# OrangeGames

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: building.md
prototypes/: phase0-pillars.md  spike-01-blob-feel.md
prototypes/spike-01-blob/: Blob.h  CMakeLists.txt  DESIGN-deform-12-states.md  DESIGN-solid-render-phase.md  DESIGN-tier2-sdf-pass.md  NOTES-dogfood-2026-07-05.md  NOTES-dogfood-2026-07-07.md  NOTES-dogfood-2026-07-08.md  NOTES-loopA.md  NOTES-platformer-test-scene.md  NOTES-wallclimb.md  SlimeEditorMain.cpp  SlimeGameModule.cpp  SlimeGameModule.h  SlimeGameModuleDllExport.cpp  SlimeMetaballPass.cpp  SlimeMetaballPass.h  SlimeRuntimeMain.cpp  SlimeSchemaDllExport.cpp  SlimeTuningComponent.cpp  SlimeTuningComponent.h  SlimeTuningSchema.cpp  SlimeTuningSchema.h  main.cpp  slime.orangeproject
prototypes/spike-01-blob/assets/scenes/: platformer-test.scene.json
prototypes/spike-01-blob/shaders/: fullscreen.vert  slime_metaball.frag
prototypes/spike-01-blob/tests/: blob_collision_test.cpp
